# stocks-sentiment-scraper

./: README.md  main.py  pyproject.toml
output/2023-08-06/: tweets_.csv  yahoo_.csv
src/configs/: api_credentials.py
src/cron_jobs/fools/: fools_scrape.py
src/cron_jobs/nyse_stocks/: nyse_scrape.py
src/cron_jobs/reddit/: reddit_scrape.py
src/cron_jobs/seeking_alpha/: seeking_alpha.py
src/cron_jobs/tweets/: tweets_scrape.py
src/cron_jobs/yahoofinance/: yahoo_scraper.py
src/helpers/: fs.py  parsers.py
tests/: stockAnalysisCron.py  stocks.csv
